modules/gdscript/tests/scripts/parser/errors/if_features_functions_with_different_signatures_2.gd
func _test():
	pass

@if_features()
func _func(a: int) -> int:
	return 1

@if_features()
func _func(a: int) -> void:
	pass
